--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "glob": "^7.1.2",
-    "gulp-rename": "^1.2.3",
+    "gulp-rename": "<1.2.3",
     "handlebars": "^4.0.11",
     "shelljs": "^0.8.2",
     "yeoman-generator": "^2.0.5",
