--- a/generators/app/templates/.docker/node/Dockerfile
+++ b/generators/app/templates/.docker/node/Dockerfile
@@ -28,6 +28,9 @@ RUN rm -Rf /opt/yarn \
   && ln -s /opt/yarn/bin/yarn /usr/local/bin/yarnpkg \
   && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz
 
+# Mise à jour de npm
+RUN npm i --global npm
+
 # Allow nodeJS to run server on port < 1024
 RUN setcap 'cap_net_bind_service=+ep' $(which node)
 
