--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "husky": "^0.14.3",
+    "eslint": "^5.7.0",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "prettier": "^1.14.3",
@@ -33,10 +33,10 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "gulp-rename": "<1.2.3",
+    "gulp-rename": "^1.4.0",
     "handlebars": "^4.0.12",
     "shelljs": "^0.8.2",
-    "yeoman-generator": "^2.0.5",
+    "yeoman-generator": "^3.1.1",
     "yosay": "^2.0.2"
   },
   "jest": {
