Add definition types for yeoman-assert and yeoman-test

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "yosay": "^2.0.2"
   },
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node"
   },
   "repository": "https://github.com/gfi-centre-ouest/generator-docker-devbox",
