--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "tsc -w",
     "test": "jest --coverage --verbose",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache"
+    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "release": "npm run lint && npm run build && npm run test && np"
   },
   "keywords": [
     "docker-devbox",
@@ -45,6 +46,7 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11",
+    "np": "*",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
