--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "glob": "^7.1.3",
     "gulp-rename": "<1.2.3",
     "handlebars": "^4.0.12",
+    "handlebars-helpers": "^0.10.0",
     "shelljs": "^0.8.2",
     "source-map-support": "^0.5.9",
     "yeoman-generator": "^3.1.1",
