--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build": "tsc",
     "prestart": "npm run clean",
     "start": "tsc -w",
-    "test": "jest --coverage --verbose",
+    "test": "npm run build && jest --coverage --verbose",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "test:prod": "npm run lint && npm run build && npm run test -- --no-cache",
     "release": "npm run lint && npm run build && npm run test && np"
   },
   "keywords": [
@@ -33,14 +33,21 @@
     "yeoman-generator"
   ],
   "devDependencies": {
+    "@gfi-centre-ouest/docker-compose-spec-typescript": "^1.0.0",
     "@types/deep-extend": "^0.4.31",
+    "@types/ejs": "^2.6.0",
     "@types/gulp-rename": "0.0.33",
     "@types/handlebars": "^4.0.39",
+    "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.9",
+    "@types/js-yaml": "^3.11.2",
     "@types/lodash": "^4.14.118",
+    "@types/mustache": "^0.8.32",
     "@types/node": "^10.12.3",
     "@types/shelljs": "^0.8.0",
-    "@types/yeoman-generator": "^3.0.0",
+    "@types/vinyl": "^2.0.2",
+    "@types/yeoman-generator": "^3.0.1",
+    "@types/yeoman-test": "^1.7.4",
     "@types/yosay": "0.0.29",
     "del-cli": "^1.1.0",
     "jest": "^23.6.0",
@@ -58,11 +65,13 @@
     "yo": "^2.0.5"
   },
   "dependencies": {
+    "@gfi-centre-ouest/docker-compose-builder": "^0.5.0",
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "gulp-rename": "<1.2.3",
     "handlebars": "^4.0.12",
     "handlebars-helpers": "^0.10.0",
+    "js-yaml": "^3.12.0",
+    "mustache": "^3.0.1",
     "shelljs": "^0.8.2",
     "source-map-support": "^0.5.9",
     "yeoman-generator": "^3.1.1",
