--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/ejs": "^2.6.0",
     "@types/gulp-rename": "0.0.33",
     "@types/handlebars": "^4.0.39",
+    "@types/handlebars-helpers": "^0.5.0",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.9",
     "@types/js-yaml": "^3.11.2",
@@ -66,6 +67,7 @@
   },
   "dependencies": {
     "@gfi-centre-ouest/docker-compose-builder": "^0.5.0",
+    "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
     "handlebars": "^4.0.12",
