--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
+sudo: required
+dist: xenial
 language: node_js
+cache:
+  directories:
+    - ~/.npm
+    - /var/lib/docker
 node_js:
   - 11
   - 10
   - 8
   - 6
+before_install:
+  - if [ "$TRAVIS_NODE_VERSION" = "11" ]; then .travis/docker-install.sh; fi
 before_script:
   - npm run lint
   - npm run build
 script:
-  - npm test:prod
+  - npm run test:prod
+  - if [ "$TRAVIS_NODE_VERSION" = "11" ]; then npm run test:docker; fi
