Add bash-disabled argument and split PHP Dockerfile in more questions

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/lodash": "^4.14.118",
     "@types/mustache": "^0.8.32",
     "@types/node": "^10.12.3",
+    "@types/semver": "^5.5.0",
     "@types/shelljs": "^0.8.0",
     "@types/vinyl": "^2.0.2",
     "@types/yeoman-generator": "^3.0.1",
@@ -75,6 +76,7 @@
     "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
     "mustache": "^3.0.1",
+    "semver": "^5.6.0",
     "shelljs": "^0.8.2",
     "source-map-support": "^0.5.9",
     "yeoman-generator": "^3.1.1",
