--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
 sudo: required
-dist: xenial
+dist: trusty
 language: node_js
 cache:
   directories:
     - ~/.npm
-    - /var/lib/docker
+#    - ~/.docker-data
+#before_cache:
+#  - if [ "$TRAVIS_NODE_VERSION" = "11" ]; then .travis/docker-archive-cache.sh ; fi
 node_js:
   - 11
   - 10
   - 8
   - 6
 before_install:
+  #- if [ "$TRAVIS_NODE_VERSION" = "11" ]; then .travis/docker-unarchive-cache.sh; fi
   - if [ "$TRAVIS_NODE_VERSION" = "11" ]; then .travis/docker-install.sh; fi
+  - if [ "$TRAVIS_NODE_VERSION" = "11" ]; then .travis/docker-nginx-proxy.sh; fi
 before_script:
   - npm run lint
   - npm run build
