--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/yosay": "0.0.29",
     "del-cli": "^1.1.0",
     "jest": "^23.6.0",
+    "jest-circus": "^23.6.0",
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11",
     "np": "*",
@@ -79,6 +80,7 @@
     "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
     "mustache": "^3.0.1",
+    "retry-axios": "^0.3.2",
     "semver": "^5.6.0",
     "shelljs": "^0.8.2",
     "source-map-support": "^0.5.9",
@@ -86,6 +88,7 @@
     "yosay": "^2.0.2"
   },
   "jest": {
+    "testRunner": "jest-circus/runner",
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
