--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "handlebars": "^4.0.12",
     "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
+    "left-pad": "^1.3.0",
     "mustache": "^3.0.1",
     "retry-axios": "^0.3.2",
     "semver": "^5.6.0",
