--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/deep-extend": "^0.4.31",
     "@types/ejs": "^2.6.0",
     "@types/gulp-rename": "0.0.33",
-    "@types/handlebars": "^4.0.39",
+    "@types/handlebars": "^4.0.40",
     "@types/handlebars-helpers": "^0.5.0",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.9",
@@ -76,7 +76,7 @@
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "handlebars": "^4.0.12",
+    "handlebars": "<4.1.0",
     "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
     "left-pad": "^1.3.0",
