--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
   "devDependencies": {
     "@gfi-centre-ouest/docker-compose-spec-typescript": "^1.0.0",
     "@types/deep-extend": "^0.4.31",
-    "@types/ejs": "^2.6.0",
+    "@types/ejs": "^2.6.3",
     "@types/gulp-rename": "0.0.33",
     "@types/handlebars-helpers": "^0.5.2",
     "@types/inquirer": "0.0.43",
-    "@types/jest": "^23.3.9",
-    "@types/js-yaml": "^3.11.2",
-    "@types/lodash": "^4.14.118",
+    "@types/jest": "^23.3.14",
+    "@types/js-yaml": "^3.12.1",
+    "@types/lodash": "^4.14.123",
     "@types/mustache": "^0.8.32",
-    "@types/node": "^10.12.3",
+    "@types/node": "^10.14.5",
     "@types/semver": "^5.5.0",
-    "@types/shelljs": "^0.8.0",
-    "@types/vinyl": "^2.0.2",
-    "@types/yeoman-generator": "^3.0.1",
+    "@types/shelljs": "^0.8.5",
+    "@types/vinyl": "^2.0.3",
+    "@types/yeoman-generator": "^3.1.1",
     "@types/yeoman-test": "^1.7.4",
     "@types/yosay": "0.0.29",
     "del-cli": "^1.1.0",
@@ -58,33 +58,32 @@
     "jest-circus": "^23.6.0",
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11",
-    "np": "*",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.3",
     "shellcheck": "^0.1.0",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.2.2",
+    "typescript": "^3.4.5",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^2.0.0",
-    "yo": "^2.0.5"
+    "yo": "^2.0.6"
   },
   "dependencies": {
     "@gfi-centre-ouest/docker-compose-builder": "^0.7.0",
     "axios": "^0.18.0",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "glob": "^7.1.3",
-    "handlebars": "<4.1.0",
+    "handlebars": "^4.0.14",
     "handlebars-helpers": "^0.10.0",
-    "js-yaml": "^3.12.0",
+    "js-yaml": "^3.13.1",
     "left-pad": "^1.3.0",
     "mustache": "^3.0.1",
     "retry-axios": "^0.3.2",
-    "semver": "^5.6.0",
-    "shelljs": "^0.8.2",
-    "source-map-support": "^0.5.9",
-    "yeoman-generator": "^3.1.1",
+    "semver": "^5.7.0",
+    "shelljs": "^0.8.3",
+    "source-map-support": "^0.5.12",
+    "yeoman-generator": "^3.2.0",
     "yosay": "^2.0.2"
   },
   "jest": {
