--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   ],
   "main": "generators/index.js",
   "scripts": {
-    "lint": "npm run tslint && npm run shlint",
-    "shlint": "shellcheck ./generators/app/templates/.bash_enter ./generators/app/templates/.bash_leave",
+    "lint": "npm run tslint",
     "tslint": "tslint --project tsconfig.json -t codeFrame 'generators/**/*.ts' '__tests__/**/*.ts' '__tests__/**/*.ts'",
     "clean": "del-cli 'generators/**/*.js' 'generators/**/*.js.map' '!generators/**/templates/**/*'",
     "prebuild": "npm run clean",
@@ -59,7 +58,6 @@
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11",
     "rimraf": "^2.6.3",
-    "shellcheck": "^0.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
