--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/ejs": "^2.6.3",
     "@types/gulp-rename": "0.0.33",
     "@types/handlebars-helpers": "^0.5.2",
-    "@types/inquirer": "0.0.43",
+    "@types/inquirer": "^6.0.3",
     "@types/jest": "^23.3.14",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.123",
@@ -49,7 +49,7 @@
     "@types/semver": "^5.5.0",
     "@types/shelljs": "^0.8.5",
     "@types/vinyl": "^2.0.3",
-    "@types/yeoman-generator": "^3.1.1",
+    "@types/yeoman-generator": "^3.1.3",
     "@types/yeoman-test": "^1.7.4",
     "@types/yosay": "0.0.29",
     "del-cli": "^1.1.0",
@@ -69,6 +69,10 @@
   },
   "dependencies": {
     "@gfi-centre-ouest/docker-compose-builder": "^0.8.0",
+    "@octokit/rest": "^16.27.3",
+    "@types/mem-fs": "^1.1.2",
+    "@types/mem-fs-editor": "^5.1.1",
+    "@types/yeoman-assert": "^3.1.1",
     "axios": "^0.18.0",
     "chalk": "^2.4.2",
     "glob": "^7.1.3",
